# tomos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build_tests.sh  clean_install.sh
include/: bochs_vga.h  font8x8.h  gdt.h  grub_def.h  io.h  kstdio.h  ksymbol.h  linker_sections.h  list.h  panic.h  pci.h  serial.h
include/interrupts/: idt.h  isr.h  isr_def.h  pic.h
include/klib/: assert.h  kbit.h  kbitmap.h  kmath.h  kstdio.h  kstring.h
include/memory/: address.h  frame.h  gdt.h  kalloc.h  kheap.h  kslab.h  memory_def.h  mm.h  page_alloc.h  page_table.h  paging.h  pg_tmp.h  vmm.h  zone.h
include/startup/: gdt.h
include/tests/: ktest.h
kernel/: CMakeLists.txt  bochs_vga.c  gdt.c  i386-pc.ld  io.c  kentry.c  kmain.c  kstdio.c  list.c  panic.c  pci.c  serial.c
kernel/asm/: boot.s  gdt.s
kernel/interrupts/: idt.c  idt.s  isr.S  isr.c  isr.s  pic.c
kernel/klib/: assert.c  kmath.c  kstdio.c  kstring.c
kernel/memory/: frame.c  gdt.c  gdt.s  kalloc.c  kheap.c  kslab.c  mm.c  page_alloc.c  page_table.c  paging.c  pg_tmp.c  vmm.c  zone.c
kernel/startup/: gdt.c  gdt.s  startup.S  startup.s
kernel/tests/: ktest.c  ktest_entry.c
kernel/tests/klib/: kbitmap_tests.c
kernel/tests/memory/: frame_tests.c  kalloc_tests.c  kheap_tests.c  kslab_tests.c  mm_tests.c  paging_tests.c  vmm_tests.c
scripts/: .clang-format  base-system.sh  build_clean.sh  build_tests.sh  format_code.sh  grub.cfg  i386-pc.ld.in  image.sh  log.sh  qemu.sh
toolchain/: CMakeToolchain.txt  build_toolchain.sh
