CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(tomos C ASM)

set(CMAKE_SYSROOT ${CMAKE_BINARY_DIR}/root)
set(CMAKE_STAGING_PREFIX ${CMAKE_BINARY_DIR}/root)
set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/root)
set(CMAKE_INSTALL_DATAROOTDIR ${CMAKE_BINARY_DIR}/root/res)

set(CMAKE_C_STANDARD 11)

INCLUDE_DIRECTORIES(${TOOLCHAIN_ROOT_DIR}/lib/gcc/${TOOLCHAIN_PLATFORM}/${GCC_VER}/ ${CMAKE_SOURCE_DIR}/include/)

LINK_DIRECTORIES(${TOOLCHAIN_ROOT_DIR}/lib/gcc/${TOOLCHAIN_PLATFORM}/${GCC_VER}/)

LINK_DIRECTORIES(${TOOLCHAIN_ROOT_DIR}/${TOOLCHAIN_PLATFORM}/lib/)

ADD_SUBDIRECTORY(kernel)

ADD_CUSTOM_TARGET(image
    COMMAND ${CMAKE_COMMAND} -E env "SOURCE_DIR=${CMAKE_SOURCE_DIR}" ${CMAKE_SOURCE_DIR}/scripts/image.sh $(IMAGE_DEV)
    BYPRODUCTS ${CMAKE_BINARY_DIR}/tomos.img
    USES_TERMINAL
)

ADD_CUSTOM_TARGET(qemu
	COMMAND ${CMAKE_SOURCE_DIR}/scripts/qemu.sh -d
	USES_TERMINAL
)

ADD_CUSTOM_TARGET(tests
    COMMAND ${CMAKE_SOURCE_DIR}/scripts/qemu.sh kernel-tests=true
    USES_TERMINAL
)